# ise_acr_delete

./: .gitignore  LICENSE  README.md  credentials.py.dist  ise.py  pyproject.toml  requirements.txt  settings.py.dist
ise_api/: __init__.py  esrapi.py  uiapi.py
