[tool.poetry]
name = "fifa-acr-delete"
version = "0.1.0"
description = ""
authors = ["Simon Obi <obi@dfga.ch>"]
readme = "README.md"
packages = [{include = "fifa_acr_delete"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
jmespath = "^1.0.1"
click = "^8.1.3"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
